{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 62,
  "lineage": "20144020-feaf-5946-f193-8c337520666a",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-17T09:52:02.360-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-for-mohab/global/firewalls/app-cluster-bastion-ssh",
            "log_config": [],
            "name": "app-cluster-bastion-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/global/networks/kubernetes-cluster",
            "priority": 1000,
            "project": "project-for-mohab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/global/firewalls/app-cluster-bastion-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-10-buster-v20221102",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/zones/europe-west3-b/disks/app-cluster-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/project-for-mohab/zones/europe-west3-b/instances/app-cluster-bastion",
            "instance_id": "7407341583891903615",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "fN-Fq_93BG4=",
            "metadata_startup_script": "sudo apt-get update -y\nsudo apt-get install -y tinyproxy\nsudo apt-get install -y kubectl\nsudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin\n",
            "name": "app-cluster-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.207.110.36",
                    "network_tier": "STANDARD"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/global/networks/kubernetes-cluster",
                "network_ip": "10.9.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/regions/europe-west3/subnetworks/kubernetes-cluster--management-subnet",
                "subnetwork_project": "project-for-mohab"
              }
            ],
            "project": "project-for-mohab",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/zones/europe-west3-b/instances/app-cluster-bastion",
            "service_account": [
              {
                "email": "app-cluster-bastion-sa@project-for-mohab.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "module.bastion.data.template_file.startup_script",
            "module.bastion.google_service_account.manage-sa",
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_subnetwork.management-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "id": "projects/project-for-mohab/global/networks/kubernetes-cluster",
            "mtu": 0,
            "name": "kubernetes-cluster",
            "project": "project-for-mohab",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/global/networks/kubernetes-cluster"
          }
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/project-for-mohab/global/routes/egress-internet",
            "name": "egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/global/networks/kubernetes-cluster",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "project-for-mohab",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/global/routes/egress-internet",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T09:52:25.765-08:00",
            "id": "projects/project-for-mohab/regions/europe-west3/routers/kubernetes-cluster-router",
            "name": "kubernetes-cluster-router",
            "network": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/global/networks/kubernetes-cluster",
            "project": "project-for-mohab",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/regions/europe-west3/routers/kubernetes-cluster-router"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "project-for-mohab/europe-west3/kubernetes-cluster-router/kubernetes-cluster--subnet-nat-router",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "kubernetes-cluster--subnet-nat-router",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "project-for-mohab",
            "region": "europe-west3",
            "router": "kubernetes-cluster-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/regions/europe-west3/subnetworks/kubernetes-cluster--management-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              },
              {
                "name": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/regions/europe-west3/subnetworks/kubernetes-cluster--subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc",
            "module.google_networks.google_compute_router.router",
            "module.google_networks.google_compute_subnetwork.management-subnet",
            "module.google_networks.google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T09:52:03.065-08:00",
            "gateway_address": "10.9.0.1",
            "id": "projects/project-for-mohab/regions/europe-west3/subnetworks/kubernetes-cluster--management-subnet",
            "ip_cidr_range": "10.9.0.0/16",
            "name": "kubernetes-cluster--management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/global/networks/kubernetes-cluster",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-for-mohab",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/regions/europe-west3/subnetworks/kubernetes-cluster--management-subnet"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.google_networks",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-17T09:52:03.522-08:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/project-for-mohab/regions/europe-west3/subnetworks/kubernetes-cluster--subnet",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "kubernetes-cluster--subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/global/networks/kubernetes-cluster",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-for-mohab",
            "region": "europe-west3",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.101.0.0/16",
                "range_name": "gke-app-cluster-pods-ce5f8e88"
              },
              {
                "ip_cidr_range": "10.102.0.0/16",
                "range_name": "gke-app-cluster-services-ce5f8e88"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-for-mohab/regions/europe-west3/subnetworks/kubernetes-cluster--subnet"
          },
          "dependencies": [
            "module.google_networks.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}